perf(ae2): reduce graph capture waits and exact input scans